Updates bib and adds another source from Conor

--- a/report/GrantFleming-4thYearProject-Report.tex
+++ b/report/GrantFleming-4thYearProject-Report.tex
@@ -11,13 +11,14 @@
 \begin{document}
 	\maketitle
 	\tableofcontents
-		
-	\input{chapters/IntroducingTheTypeSystems}
-	\input{chapters/TheSystemsInPractice}
-	\input{chapters/ComparingTheSystems}
-	\input{chapters/CorrectnessByConstruction}
+        
+	\input{chapters/WhatIsATypeSystem.tex}
+	\input{chapters/IntroducingTheTypeSystems.tex}
+	\input{chapters/TheSystemsInPractice.tex}
+	\input{chapters/ComparingTheSystems.tex}
+	\input{chapters/CorrectnessByConstruction.tex}
 	
-	\input{appendices}
+	\input{appendices.tex}
 	
 	\clearpage
 	\addcontentsline{toc}{chapter}{Bibliography}
