--- a/report/GrantFleming-4thYearProject-Report.tex
+++ b/report/GrantFleming-4thYearProject-Report.tex
@@ -12,11 +12,14 @@
 	\maketitle
 	\tableofcontents
         
-	\input{chapters/WhatIsATypeSystem.tex}
-	\input{chapters/IntroducingTheTypeSystems.tex}
-	\input{chapters/TheSystemsInPractice.tex}
-	\input{chapters/ComparingTheSystems.tex}
-	\input{chapters/CorrectnessByConstruction.tex}
+            \input{chapters/Abstract.tex}
+        \part{Background \& Literature Review}
+	    \input{chapters/WhatIsATypeSystem.tex}
+	    \input{chapters/IntroducingTheTypeSystems.tex}
+	    \input{chapters/TheSystemsInPractice.tex}
+	    \input{chapters/ComparingTheSystems.tex}
+        \part{The Fun Bit}
+	    \input{chapters/CorrectnessByConstruction.tex}
 	
 	\input{appendices.tex}
 	
