--- a/report/references.bib
+++ b/report/references.bib
@@ -135,5 +135,21 @@
     volume = {49},
     number = {9}
 }
-
-
+@article{Russell1901,
+    author = {Bell, David},
+    title = {Gottlob Frege: Philosophical and Mathematical Correspondence.},
+    journal = {Philosophical Books},
+    volume = {22},
+    number = {2},
+    pages = {117-121},
+    doi = {10.1111/j.1468-0149.1981.tb00986.x},
+    url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1468-0149.1981.tb00986.x},
+    eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1468-0149.1981.tb00986.x},
+    year = {1981}
+}
+@phdthesis{Girard1972,
+    title = {Interprétation fonctionnelle et élimination des coupures de l'arithmétique d'ordre supérieur},
+    author = {Jean-Yves Girard},
+    school = {Université Paris Diderot},
+    year = {1972}
+}
