Completed cover page

--- a/progress-report/Progress-Report.tex
+++ b/progress-report/Progress-Report.tex
@@ -1,12 +1,13 @@
-\documentclass{FinalYearReport}[2020/09/15]
+\documentclass{ProgressReport}[2020/09/15]
 
 \addbibresource{references.bib}
 
-\title{A Type-Checker-Generator - Progress Report}
-\markingscheme{Experimental with Significant Software Development}
+\title{Type-Checker Generation}
+\markingscheme{Software Development}
 \regnumber{201700435}
 \author{Grant G Fleming}
 \date{2020/2021}
+\supervisor{Conor McBride}
 
 \begin{document}
 	\maketitle
